<?xml version="1.0" encoding="utf-8"?>
<TableLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/cast_iching"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:stretchColumns="*"
  android:gravity="center_horizontal">
    <TableRow>
    	<ImageView
			android:id="@+id/hexagrams"
            android:layout_span="2"
	    	android:layout_gravity="center"
	    	android:layout_marginTop="5dip"
	    	android:layout_marginBottom="5dip"
    		android:src="@drawable/divination"/>
    </TableRow>
    <TableRow>
    	<TextView
			android:layout_width="fill_parent"
            android:layout_span="2"
	    	android:text="@string/instruction"
	    	android:layout_gravity="center"
	    	android:layout_marginRight="20dip"/>
    </TableRow>
    <TableRow>
    	<EditText
			android:id="@+id/question"
            android:layout_span="2"
    		android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:singleLine="false"
            android:lines="3"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            style="@style/instruction"
            />
    </TableRow>
	<include layout="@layout/hexagrams"/>
  	<TableRow>
		<LinearLayout
	  		android:layout_width="fill_parent"
	  		android:layout_height="wrap_content"
	  		android:orientation="horizontal"
	  		android:layout_gravity="center">
  			<ImageView
				android:id="@+id/first_coin"
				android:layout_width="wrap_content"
	  			android:layout_height="wrap_content"
	  			android:src="@drawable/default_coin"/>
			<ImageView
				android:id="@+id/second_coin"
				android:layout_width="wrap_content"
	  			android:layout_height="wrap_content"
	  			android:src="@drawable/default_coin"
	  			android:paddingLeft="6dip"
	  			android:paddingRight="6dip"/>
			<ImageView
				android:id="@+id/third_coin"
				android:layout_width="wrap_content"
	  			android:layout_height="wrap_content"
	  			android:src="@drawable/default_coin"/>
	  	</LinearLayout>
	  	<LinearLayout
	  		android:layout_width="fill_parent"
	  		android:layout_height="fill_parent"
	  		android:layout_gravity="center">
  			<Button
	  		  android:id="@+id/tossCoin"
		      android:text="@string/tossCoin"
		      android:layout_height="30dip"
		      android:layout_width="100dip"
		      style="@style/castIChingButton"/>
	  	</LinearLayout>
  	</TableRow>
  	<TableRow>
		<LinearLayout
	  		android:layout_width="fill_parent"
	  		android:layout_height="wrap_content"
	  		android:orientation="horizontal"
	  		android:layout_gravity="center">
  			<Button
		      android:text="@string/tossCoin"
		      android:layout_height="30dip"
		      android:layout_width="100dip"
		      style="@style/castIChingButton"
		      android:visibility="invisible"/>
	  	</LinearLayout>
	  	<LinearLayout
	  		android:layout_width="fill_parent"
	  		android:layout_height="fill_parent"
	  		android:layout_gravity="center">
  			<Button
	  		  android:id="@+id/saveDivination"
		      android:text="@string/saveDivination"
		      android:layout_height="30dip"
		      android:layout_width="100dip"
		      style="@style/castIChingButton"
		      android:visibility="invisible"/>
	  	</LinearLayout>
  	</TableRow>
</TableLayout>
